--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="kmutnb.polwatthana.natthawut.mytraffic.MainActivity">
+    tools:context="kmutnb.polwatthana.natthawut.mytraffic.MainActivity"
+    android:background="@drawable/bg15">
 
     <TextView
         android:layout_width="wrap_content"
@@ -15,5 +16,22 @@
         android:text="@string/title"
         android:id="@+id/textView"
         android:textSize="@dimen/h1"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/text" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/button"
+        android:layout_alignParentBottom="true" />
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/listView"
+        android:layout_below="@+id/textView"
+        android:layout_above="@+id/button"
+        android:layout_margin="15dp"
+        android:background="#82ffffff" />
 </RelativeLayout>
